--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -259,3 +259,28 @@ doi = {10.48550/arXiv.1712.00303}
    author={Frasca, A. and Biazzo, K. and Alcala, J. M. and Manara, C. F. and Stelzer, B. and Covino, E. and Antoniucci, S.},
    year={2017},
    month=may, pages={A33} }
+
+@article{Woitke_2018,
+   title={Modelling mid-infrared molecular emission lines from T Tauri stars},
+   volume={618},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201731460},
+   DOI={10.1051/0004-6361/201731460},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={Woitke, P. and Min, M. and Thi, W.-F. and Roberts, C. and Carmona, A. and Kamp, I. and Ménard, F. and Pinte, C.},
+   year={2018},
+   month=oct, pages={A57} }
+
+@article{Pontoppidan_2009,
+   title={A NEW RAYTRACER FOR MODELING AU-SCALE IMAGING OF LINES FROM PROTOPLANETARY DISKS},
+   volume={704},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/704/2/1482},
+   DOI={10.1088/0004-637x/704/2/1482},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Pontoppidan, Klaus M. and Meijerink, Rowin and Dullemond, Cornelis P. and Blake, Geoffrey A.},
+   year={2009},
+   month=oct, pages={1482–1494} }
